syntax = "proto3";

option csharp_namespace = "gRPCCommon";

package demo;

// The greeting service definition.
service gRPCDemo {
  // Sends a greeting
  rpc UnaryCall (SampleRequest) returns (SampleReply);

  rpc ServerSideStream (SampleRequest) returns (stream SampleReply);

  rpc ClientSideStream (stream SampleRequest) returns (SampleReply);
}

// The request message containing the user's name.
message SampleRequest {
  string name = 1;
}

// The response message containing the greetings.
message SampleReply {
  string message = 1;
}
